--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+  font-family: 'Ubuntu', sans-serif;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -5,11 +10,18 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: rgb(184, 110, 184);
   color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
+}
+
+#yummy{
+  font-family: 'Shantell Sans', cursive;
+  color: #fff;
+  text-decoration: none;
   padding: 10px;
 }
 
@@ -31,7 +43,6 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #fff;
   color: #333;
 }
 
