--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
   padding: 10px;
 }
 
-#yummy{
+#Yummy{
   font-family: 'Shantell Sans', cursive;
   color: #fff;
   text-decoration: none;
@@ -53,4 +53,21 @@ nav a:hover {
 
 .page.active {
   display: block;
+}
+
+.loginbox{
+  margin: 0 auto;
+  width: 300px;
+  height: 380px;
+  /* background: burlywood; */
+  /* color: #fff; */
+  top: 50%;
+  left:50%;
+  position: absolute;
+  /* display: inline-block; */
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+  /* border-radius: 5%; */
+  font-family: 'Ubuntu', sans-serif
 }
