--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   font-family: 'Ubuntu', sans-serif;
 }
 
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -18,7 +17,7 @@ header {
   padding: 10px;
 }
 
-#Yummy{
+#YummyH1{
   font-family: 'Shantell Sans', cursive;
   color: #fff;
   text-decoration: none;
