--- a/style.css
+++ b/style.css
@@ -74,105 +74,22 @@ nav a:hover {
 
 .image-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .image-container img {
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   margin-right: 5px;
   transition: transform 0.2s ease-in-out;
+  margin-bottom: 40px;
+}
+
+.img__wrap h4{
+  margin-top: -40px;
 }
 
 .image-container img:hover {
   transform: scale(1.1);
 }
-
-
-
-
-/*
-.rows{
-  display: grid;
-  position: fixed;
-  grid-template-columns: repeat(4, 1fr);
-  
-}
-
-.rows div{
-  display: inline-block;
-  /*grid-area: 2 / 1 / span 2 / span 3;*/
-  /* grid-template-columns: auto auto auto auto;
-  gap: 10px; 
-  padding: 10px;
-  width: 50%;
-  position: relative;
-  margin: 7px;
-  right: 350px;
-  bottom: 410px;
-
-}
-
-section for img1
-.rows div img{
-  /* display: block; 
-  width: 40%;
-  height: 20%;
-  width: 120px;
-  height: 120px;
-  border-radius: 5%;
-}
-
-.rows div img:hover{
-  cursor: pointer;
-}
-
-/*section for h4 of img1*
-.rows div h4{
-  text-align: center;
-  position: relative;
-  color:brown;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 15px;
-  width: 200%;
-  
-}
-
-.img__wrap {
-  -webkit-filter: brightness(100%);
-  position: relative;
-  height: 200px;
-  width: 257px;
-}
-
-.img__wrap:hover img{
-  /* filter: brightness(70%); *
-  -webkit-filter: brightness(60%);
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
-}
-
-.img__description {
-  position: absolute;
-  top: 50px;
-  bottom: 0;
-  left: 0;
-  right: 28px;
-  -webkit-text-stroke: 0.1px white;
-  color: brown;
-  visibility: hidden;
-  opacity: 1;
-  font-size: 23px;
-  /* transition effect*
-  transition: opacity .2s, visibility .2s;
-}
-
-.img__wrap:hover .img__description {
-  visibility: visible;
-  opacity: 1;
-  filter: brightness(100%);
-}
-*/
