--- a/style.css
+++ b/style.css
@@ -72,10 +72,15 @@ nav a:hover {
   font-family: 'Ubuntu', sans-serif
 }
 
+img {
+  border-radius: 10%;
+}
+
 .image-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  transition: box-shadow 0.3s ease;
 }
 
 .image-container img {
@@ -92,4 +97,19 @@ nav a:hover {
 
 .image-container img:hover {
   transform: scale(1.1);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); /* add a shadow effect */
+}
+
+/*text when hover*/
+.image-container .text-overlay {
+  position: absolute; /* set position to absolute */
+  top: 50%; /* position the text in the middle of the container */
+  left: 50%; /* position the text in the middle of the container */
+  transform: translate(-50%, -50%); /* center the text properly */
+  opacity: 0; /* set opacity to 0 by default */
+  transition: opacity 0.3s ease; /* add a transition effect */
+}
+
+.image-container:hover .text-overlay {
+  opacity: 1; /* show the text */
 }
