--- a/style.css
+++ b/style.css
@@ -74,6 +74,11 @@ nav a:hover {
 
 img {
   border-radius: 10%;
+  transition: filter 0.5s;
+}
+
+img:hover{
+  filter: brightness(0.3);
 }
 
 .image-container {
@@ -81,6 +86,11 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
   transition: box-shadow 0.3s ease;
+}
+
+.image-wrapper {
+  position: relative;
+  flex-basis: 33.33%;
 }
 
 .image-container img {
@@ -91,25 +101,22 @@ img {
   margin-bottom: 40px;
 }
 
-.img__wrap h4{
-  margin-top: -40px;
-}
-
 .image-container img:hover {
   transform: scale(1.1);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); /* add a shadow effect */
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-/*text when hover*/
-.image-container .text-overlay {
-  position: absolute; /* set position to absolute */
-  top: 50%; /* position the text in the middle of the container */
-  left: 50%; /* position the text in the middle of the container */
-  transform: translate(-50%, -50%); /* center the text properly */
-  opacity: 0; /* set opacity to 0 by default */
-  transition: opacity 0.3s ease; /* add a transition effect */
+.text {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: transparent;
+  visibility: hidden;
+  transition: all 0.5s ease;
 }
 
-.image-container:hover .text-overlay {
-  opacity: 1; /* show the text */
+.image-container:hover .text {
+  color: white;
+  visibility: visible;
 }
