--- a/style.css
+++ b/style.css
@@ -106,17 +106,30 @@ img:hover{
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
+.image-wrapper:hover .image {
+  filter: brightness(0.7);
+}
+
+/*
 .text {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: transparent;
+  color: white;
   visibility: hidden;
   transition: all 0.5s ease;
 }
 
-.image-container:hover .text {
+.image-wrapper:hover .text {
   color: white;
   visibility: visible;
+}
+*/
+
+.favorite-button {
+
+}
+
+.favorite-button.favorited {
 }
